<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.assessment</groupId>
    <artifactId>demo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>demo</name>
    <description>Demo project for Spring Boot</description>
    <properties>
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.session</groupId>
            <artifactId>spring-session-core</artifactId>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.2.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.11.5</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
<!--use below dependency to convert java obj into JSON representation and vice versa-->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>


        <!--		<?xml version="1.0" encoding="UTF-8"?>-->
        <!--<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
        <!--		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">-->

        <!--<modelVersion>4.0.0</modelVersion>-->
        <!--<parent>-->
        <!--	<groupId>org.springframework.boot</groupId>-->
        <!--	<artifactId>spring-boot-starter-parent</artifactId>-->
        <!--	<version>3.2.1</version>-->
        <!--	<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
        <!--</parent>-->
        <!--<groupId>com.assessment</groupId>-->
        <!--<artifactId>demo</artifactId>-->
        <!--<version>0.0.1-SNAPSHOT</version>-->
        <!--<name>demo</name>-->
        <!--<description>Demo project for Spring Boot</description>-->
        <!--<properties>-->
        <!--	<java.version>17</java.version>-->
        <!--</properties>-->
        <!--<dependencies>-->
        <!--	<dependency>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter-data-jpa</artifactId>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter-security</artifactId>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter</artifactId>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter-web</artifactId>-->
        <!--	</dependency>-->

        <!--	<dependency>-->
        <!--		<groupId>com.mysql</groupId>-->
        <!--		<artifactId>mysql-connector-j</artifactId>-->
        <!--		<version>8.2.0</version>-->
        <!--		<scope>runtime</scope>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>org.projectlombok</groupId>-->
        <!--		<artifactId>lombok</artifactId>-->
        <!--		<optional>true</optional>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter-test</artifactId>-->
        <!--		<scope>test</scope>-->
        <!--	</dependency>-->

        <!--	<dependency>-->
        <!--		<groupId>org.springframework.security</groupId>-->
        <!--		<artifactId>spring-security-test</artifactId>-->
        <!--		<scope>test</scope>-->
        <!--	</dependency>-->

        <!--	<dependency>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>com.google.code.gson</groupId>-->
        <!--		<artifactId>gson</artifactId>-->
        <!--		<version>LATEST</version> &lt;!&ndash; Use the latest version available &ndash;&gt;-->
        <!--	</dependency>-->

        <!--	<dependency>-->
        <!--		<groupId>javax.servlet</groupId>-->
        <!--		<artifactId>javax.servlet-api</artifactId>-->
        <!--		<version>3.1.0</version>-->
        <!--	</dependency>-->

        <!--	<dependency>-->
        <!--		<groupId>org.springframework.boot</groupId>-->
        <!--		<artifactId>spring-boot-starter-oauth2-client</artifactId>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>org.hibernate</groupId>-->
        <!--		<artifactId>hibernate-core-jakarta</artifactId>-->
        <!--		<version>5.6.15.Final</version>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>org.springframework.security</groupId>-->
        <!--		<artifactId>spring-security-config</artifactId>-->
        <!--		<version>6.2.1</version>-->
        <!--	</dependency>-->
        <!--	<dependency>-->
        <!--		<groupId>jakarta.persistence</groupId>-->
        <!--		<artifactId>jakarta.persistence-api</artifactId>-->
        <!--		<version>LATEST</version>-->
        <!--	</dependency>-->
        <!--</dependencies>-->


        <!--<build>-->
        <!--	<extensions>-->
        <!--		<extension>-->
        <!--			<groupId>kr.motd.maven</groupId>-->
        <!--			<artifactId>os-maven-plugin</artifactId>-->
        <!--		</extension>-->
        <!--	</extensions>-->

        <!--	<plugins>-->
        <!--		<plugin>-->
        <!--			<groupId>org.springframework.boot</groupId>-->
        <!--			<artifactId>spring-boot-maven-plugin</artifactId>-->
        <!--			<configuration>-->
        <!--				<excludes>-->
        <!--					<exclude>-->
        <!--						<groupId>org.projectlombok</groupId>-->
        <!--						<artifactId>lombok</artifactId>-->
        <!--					</exclude>-->
        <!--				</excludes>-->
        <!--			</configuration>-->
        <!--		</plugin>-->
        <!--	</plugins>-->
        <!--</build>-->

        <!--</project>-->

